--- a/web/.env.production
+++ b/web/.env.production
@@ -1,2 +1,2 @@
-GATSBY_SANITY_PROJECT_ID="PROJECT_ID"
-GATSBY_SANITY_DATASET="DATASET_ID"
+GATSBY_SANITY_PROJECT_ID="qyx8vojy"
+GATSBY_SANITY_DATASET="production"
